--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -10,11 +10,37 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v4 # this action downloads our code on server
+
       - name: Set up NodeJs
         uses: actions/setup-node@v4 # this action sets up node js on the server machine (runner)
         with:
           node-version: 20.11.0
+
       - name: Install dependencies
         run: npm ci # this is like npm install but uses the versions specified in package.json
+
       - name: Run test
         run: npm test
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v4
+
+      - name: Set up NodeJs
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.11.0
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+
+      - name: Deploy to GitHub Pages
+        run: peaceiris/actions-gh-pages@v4
+        with:
+        github_token: ${{ secrets.ACCESS_TOKEN }}
+        publish_dir: ./dist
