--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -40,7 +40,7 @@ jobs:
         run: npm run build
 
       - name: Deploy to GitHub Pages
-        run: peaceiris/actions-gh-pages@v4
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.ACCESS_TOKEN }}
           publish_dir: ./dist
