Make it so that workflow can be run manually

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch: # this makes it possible to run workflow manually
 
 permissions:
   contents: read
