--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,11 @@ jobs:
       - name: Build project
         run: npm run build # Adjust this command if you're using another build tool
 
+      - name: Set up Git user for deployment
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@users.noreply.github.com"
+
       - name: Deploy to GitHub Pages
         run: |
           npm run deploy
@@ -53,8 +58,6 @@ jobs:
 
       - name: Commit changes to gh-pages branch
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@users.noreply.github.com"
           git add -A
           git commit -m "Deploy to GitHub Pages" || echo "No changes to commit"
           git push --force origin gh-pages
