Re-add user identity

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,11 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Set up Git user for deployment
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@users.noreply.github.com"
+
       - name: Deploy to GitHub Pages
         run: |
           npm run deploy
