--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,6 @@ jobs:
         run: |
           git add -A
           git commit -m "Deploy to GitHub Pages" || echo "No changes to commit"
-          git push --force https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }} gh-pages
+          git push --force origin `git rev-parse --abbrev-ref HEAD`:gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
