--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Checkout gh-pages branch
         run: |
-          git fetch origin gh-pages || git checkout -b gh-pages
+          git fetch origin
           if git show-ref --verify --quiet refs/heads/gh-pages; then
             git checkout gh-pages
           else
