--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
-          npm run deploy -- --branch gh-pages
+          npm run deploy
         env:
           CI: false
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
