--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,33 +39,32 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install gh-pages package
-        run: npm install gh-pages --save-dev
+      # - name: Install gh-pages package
+      #   run: npm install gh-pages --save-dev
 
-      - name: Set up Git user for deployment
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@users.noreply.github.com"
-          git config --global credential.helper "store"
-          echo "https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com" > ~/.git-credentials
+      # - name: Set up Git user for deployment
+      #   run: |
+      #     git config --global user.name "github-actions"
+      #     git config --global user.email "github-actions@users.noreply.github.com"
+      #     git config --global credential.helper "store"
+      #     echo "https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com" > ~/.git-credentials
 
-      - name: Checkout gh-pages branch
-        run: |
-          git fetch origin
-          if git show-ref --verify --quiet refs/heads/gh-pages; then
-            git checkout gh-pages
-          else
-            git checkout -b gh-pages origin/main
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+      # - name: Checkout gh-pages branch
+      #   run: |
+      #     git fetch origin
+      #     if git show-ref --verify --quiet refs/heads/gh-pages; then
+      #       git checkout gh-pages
+      #     else
+      #       git checkout -b gh-pages origin/main
+      #     fi
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: Build project
         run: npm run build
 
       - name: Deploy to GitHub Pages
-        run: |
-          npm run deploy
-        env:
-          CI: false
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.PAT_TOKEN }}
+          publish_dir: ./dist
